# meme-generator-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64  README.md
.cargo/: config.toml
.github/workflows/: build.yml  container.yml  docker.yml  format.yml  maturin.yml  publish.yml  release.yml  update.yml  update_resources.yml  update_wiki.yml
container/: Dockerfile
meme_generator/: Cargo.toml
meme_generator/src/: canvas.rs  config.rs  decoder.rs  encoder.rs  error.rs  image.rs  lib.rs  main.rs  manager.rs  meme.rs  memes.rs  options.rs  registry.rs  resources.rs  search.rs  tags.rs  text.rs  utils.rs  version.rs
meme_generator/src/contrib/: do_.rs
meme_generator/src/memes/: abstinence.rs  ace_attorney_dialog.rs  always.rs  always_like.rs  arona_throw.rs  atri_pillow.rs  batitle.rs  beat_up.rs  blamed_mahiro.rs  bocchi_draft.rs  call_110.rs  capoo_draw.rs  capoo_point.rs  capoo_rip.rs  capoo_rub.rs  capoo_say.rs  capoo_stew.rs  capoo_strike.rs  captain.rs  caused_by_this.rs  certificate.rs  charpic.rs  chase_train.rs  china_flag.rs  clauvio_twist.rs  clown_mask.rs  confuse.rs  cover_face.rs  decent_kiss.rs  dinosaur.rs  distracted.rs  dog_of_vtb.rs  dont_press.rs  fanatic.rs  fight_with_sunuo.rs  fill_head.rs  firefly_holdsign.rs  flash_blind.rs  follow.rs  frieren_take.rs  (+24 more)
meme_generator/src/tools/: image_operations.rs  mod.rs  render_list.rs  render_statistics.rs
meme_generator/src/utils/: canvas.rs  decoder.rs  encoder.rs  image.rs  mod.rs  options.rs  tags.rs  text.rs  tools.rs
meme_generator_cli/: Cargo.toml
meme_generator_cli/src/: app.rs  cli.rs  main.rs  tools.rs
meme_generator_core/: Cargo.toml
meme_generator_core/src/: config.rs  error.rs  lib.rs  meme.rs  registry.rs
meme_generator_frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
meme_generator_frontend/src/: App.vue  api.ts  router.ts  style.css  types.ts
meme_generator_frontend/src/components/: ImageUploader.vue  MemeCard.vue  OptionField.vue
meme_generator_frontend/src/views/: MemeGenerator.vue  MemeList.vue
meme_generator_memes/: Cargo.toml
meme_generator_memes/src/: config.rs  lib.rs  memes.rs  options.rs  registry.rs  tags.rs  utils.rs
meme_generator_memes/src/memes/: abstinence.rs  ace_attorney_dialog.rs  acg_entrance.rs  add_chaos.rs  addiction.rs  alike.rs  alipay.rs  always.rs  always_like.rs  anan.rs  anan_say.rs  anti_kidnap.rs  anya_suki.rs  applaud.rs  arona_throw.rs  ascension.rs  ask.rs  atri_pillow.rs  ayachi_holdsign.rs  ba_say.rs  back_to_work.rs  backflip.rs  bad_news.rs  batitle.rs  beat_head.rs  beat_up.rs  blamed_mahiro.rs  blood_pressure.rs  bocchi_draft.rs  bronya_holdsign.rs  bubble_tea.rs  call_110.rs  capoo_draw.rs  capoo_point.rs  capoo_rip.rs  capoo_rub.rs  capoo_say.rs  capoo_stew.rs  capoo_strike.rs  captain.rs  (+245 more)
meme_generator_node/: Cargo.toml  index.d.ts  index.js  js-binding.js  package.json  pnpm-lock.yaml
meme_generator_node/scripts/: sync-version.js
meme_generator_node/src/: lib.rs
meme_generator_node/src/resources/: mod.rs
meme_generator_node/src/tools/: image_operations.rs  mod.rs
meme_generator_py/: Cargo.toml  meme_generator.pyi  pyproject.toml
meme_generator_py/meme_generator/: __init__.pyi
meme_generator_py/meme_generator/tools/: __init__.pyi
meme_generator_py/meme_generator/tools/image_operations/: __init__.pyi
meme_generator_py/src/: lib.rs
meme_generator_py/src/resources/: mod.rs
meme_generator_py/src/tools/: image_operations.rs  mod.rs
meme_generator_server/: Cargo.toml
meme_generator_server/src/: config.rs  lib.rs  main.rs  server.rs
meme_generator_server/src/tools/: image_operations.rs  mod.rs
meme_generator_template/: Cargo.toml
meme_generator_template/src/: error.rs  executor.rs  expr.rs  lib.rs  loader.rs  schema.rs
meme_generator_utils/: Cargo.toml
meme_generator_utils/src/: api.rs  builder.rs  canvas.rs  config.rs  decoder.rs  encoder.rs  image.rs  lib.rs  text.rs  tools.rs
meme_options_derive/: Cargo.toml
meme_options_derive/src/: lib.rs  options.rs
resources/: resources.json
scripts/: update_resources.py
src/: assets.rs  canvas.rs  config.rs  decoder.rs  encoder.rs  error.rs  image.rs  lib.rs  resources.rs  utils.rs
templates/: abstinence.yml  acg_entrance.yml  add_chaos.yml  addiction.yml  alike.yml  always_like.yml  anan_say.yml  anti_kidnap.yml  anya_suki.yml  applaud.yml  arona_throw.yml  ascension.yml  atri_pillow.yml  ayachi_holdsign.yml  ba_say.yml  back_to_work.yml  bad_news.yml  beat_head.yml  beat_up.yml  blamed_mahiro.yml  blood_pressure.yml  bocchi_draft.yml  bronya_holdsign.yml  bubble_tea.yml  call_110.yml  capoo_draw.yml  capoo_point.yml  capoo_rip.yml  capoo_rub.yml  capoo_stew.yml  capoo_strike.yml  caused_by_this.yml  certificate.yml  chase_train.yml  china_flag.yml  chino_throw.yml  clauvio_twist.yml  clown_mask.yml  confuse.yml  coupon.yml  (+3 more)
