[workspace]
members = [
    "meme_generator",
    "meme_generator_cli",
    "meme_generator_server",
    "meme_options_derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MeetWq/meme-generator"
repository = "https://github.com/MeetWq/meme-generator"
edition = "2021"
