[package]
name = "meme_generator"
description = "Meme generator for making fun pictures"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
fuzzy-matcher = "0.3"
indicatif = "0.16"
libloading = "0.8"
pinyin = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
skia-safe = { version = "0.80", features = ["textlayout"] }
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
tracing = "0.1"

meme_generator_core = { version = "0.0.4", path = "../meme_generator_core" }
meme_generator_memes = { version = "0.2", path = "../meme_generator_memes" }
meme_generator_utils = { version = "0.0.7", path = "../meme_generator_utils" }

[features]
vendored = ["reqwest/native-tls-vendored"]
embed-freetype = ["meme_generator_memes/embed-freetype"]
