[package]
name = "meme_generator"
description = "Meme generator for making fun pictures"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
fuzzy-matcher = { version = "0.3" }
indicatif = { version = "0.16" }
libloading = { version = "0.8" }
pinyin = { version = "0.10" }
sha2 = { version = "0.10.9" }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
skia-safe = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

meme_generator_core = { version = "0.0.4", path = "../meme_generator_core" }
meme_generator_memes = { version = "0.2", path = "../meme_generator_memes" }
meme_generator_utils = { version = "0.0.8", path = "../meme_generator_utils" }

[features]
vendored = ["reqwest/native-tls-vendored"]
embed-freetype = ["meme_generator_memes/embed-freetype"]
