[package]
name = "meme_generator_cli"
description = "CLI for meme_generator"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["string"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
infer = { workspace = true}
tracing = { workspace = true }

meme_generator = { path = "../meme_generator" }
meme_generator_server = { path = "../meme_generator_server", optional = true }

[features]
server = ["dep:meme_generator_server"]

[[bin]]
name = "meme"
path = "src/main.rs"
