[package]
name = "meme_generator_cli"
description = "CLI for meme_generator"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["string"] }

infer.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

meme_generator.workspace = true
meme_generator_server = { path = "../meme_generator_server", optional = true }

[features]
server = ["dep:meme_generator_server"]

[[bin]]
name = "meme"
path = "src/main.rs"
