[package]
name = "meme_generator_core"
description = "Meme generator core"
version = "0.0.4"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
directories = "5.0"
serde = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
rustc_version = "0.4"
