[package]
name = "meme_generator_memes"
description = "Meme generator built-in memes"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
inventory = { version = "0.3" }
qrcode = { version = "0.14", default-features = false }
rand = { version = "0.8" }
serde = { workspace = true }
skia-safe = { workspace = true }

meme_generator_core = { version = "0.0.4", path = "../meme_generator_core" }
meme_generator_utils = { version = "0.0.8", path = "../meme_generator_utils" }

[features]
embed-freetype = ["skia-safe/embed-freetype"]
