[package]
name = "meme_generator_node"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8", default-features = false, features = ["chrono_date"] }
napi-derive = { version = "3.5", default-features = false }

chrono.workspace = true

meme_generator.workspace = true

[build-dependencies]
napi-build = "2"

[features]
vendored = ["meme_generator/vendored"]
embed-freetype = ["meme_generator/embed-freetype"]
