[package]
name = "meme_generator_py"
description = "Python bindings for meme_generator"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39", "chrono"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

meme_generator = { path = "../meme_generator" }

[lib]
crate-type = ["cdylib"]

[features]
vendored = ["meme_generator/vendored"]
embed-freetype = ["meme_generator/embed-freetype"]
