[package]
name = "meme_generator_py"
description = "Python bindings for meme_generator"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310", "chrono"] }

chrono.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

meme_generator.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
vendored = ["meme_generator/vendored"]
embed-freetype = ["meme_generator/embed-freetype"]
