[package]
name = "meme_generator_server"
description = "Server for meme_generator"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
base64 = { version = "0.22.1" }
base64-serde = { version = "0.8" }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
infer = { workspace = true}
md5 = { workspace = true }
reqwest = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

meme_generator = { path = "../meme_generator" }

[[bin]]
name = "server"
path = "src/main.rs"
