[package]
name = "meme_generator_server"
description = "Server for meme_generator"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
base64-serde = "0.8"
infer = "0.16"
md5 = "0.7"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

meme_generator = { path = "../meme_generator" }

[[bin]]
name = "server"
path = "src/main.rs"
