[package]
name = "meme_generator_server"
description = "Server for meme_generator"
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
base64-serde = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }

infer.workspace = true
md5.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

meme_generator.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"
