[package]
name = "meme_generator_utils"
description = "Meme generator utils"
version = "0.0.5"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
gif = "0.13"
md5 = "0.7"
regex = "1.11"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skia-safe = { version = "0.80", features = ["textlayout"] }
tokio = { version = "1.42", features = ["full"] }
toml = "0.8"
tracing = "0.1"

meme_generator_core = { version = "0.0.3", path = "../meme_generator_core" }
meme_options_derive = { version = "0.0.5", path = "../meme_options_derive" }
