[package]
name = "meme_generator_utils"
description = "Meme generator utils"
version = "0.0.8"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
gifski = { version = "1.33", default-features = false }
regex = "1.11"
chrono = { workspace = true }
md5 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
skia-safe = { workspace = true}
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

meme_generator_core = { version = "0.0.4", path = "../meme_generator_core" }
meme_options_derive = { version = "0.0.5", path = "../meme_options_derive" }
